--- a/static/todoapp_main/css/style.css
+++ b/static/todoapp_main/css/style.css
@@ -87,6 +87,10 @@ button {
     transition: all 0.2s ease-in-out;
 }
 
+button.navbar__btn {
+    background: none;
+}
+
 .navbar__btn--outline {
     border: 1px solid #fff;
     color: #fff;
