--- a/todoapp_main/templates/base.html
+++ b/todoapp_main/templates/base.html
@@ -32,7 +32,7 @@
               Logout
             </button>
           </form>
-
+          {% else %}
           <a href="{% url 'login' %}" class="navbar__btn navbar__btn--outline">
             Login
           </a>
